H1: changed heading to Our Home

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </ul>
         </nav>
     <div class="container">
-        <h1>Home</h1>
+        <h1> Our Home</h1>
         <p>Welcome to the home page of the website. Here you can find the following pages:</p>
         <button><a href="login.php">Login</a></button>
     </div>
