--- a/index.html
+++ b/index.html
@@ -1,56 +1,9 @@
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-        body {
-            background-image: url('images/background.jpg');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
-        .container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.8);
-            border-radius: 10px;
-            color: white;
-        }
-        .container h1 {
-            text-align: center;
-            margin-bottom: 40px;
-            font-family: 'Roboto Slab', serif;
-        }
-        .container a {
-            text-decoration: none;
-            color: white;
-            font-family: 'Open Sans', sans-serif;
-        }
-        .container a:hover {
-            color: #f1c40f;
-        }
-        .container p {
-            font-family: 'Open Sans', sans-serif;
-        }
-        .container button {
-            padding: 10px 20px;
-            margin-top: 20px;
-            background-color: #f1c40f;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-family: 'Open Sans', sans-serif;
-        }
-        .container button:hover {
-            background-color: #f39c12;
-        }
-        </style>
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -62,15 +15,22 @@
                 <li><a href="form.html">Contact</a></li>
             </ul>
         </nav>
-    <div class="container">
         <h1> Our Home</h1>
+    </header>
+
+    <main>
+        
         <p>Welcome to the home page of the website. Here you can find the following pages:</p>
-        <button><a href="login.php">Login</a></button>
-    </div>
-</body>
+        <button><a href="#">Login</a></button>
+    </main>
+
+
     <footer>
-     <p>Created by: <a href="jshmgb3@gmail.com">Joshua Mugabe</a></p>
-     <p>in colaboration with</p>
-     <p>Created by: <a href="hakimkavuma99@gmail.com">Kavuma Hakim</a></p>
+        <p>Created by: <a href="jshmgb3@gmail.com">Joshua Mugabe</a></p>
+        <p>In collaboration with</p>
+        <p>Created by: <a href="hakimkavuma99@gmail.com">Kavuma Hakim</a></p>
     </footer>
+
+
+    </body>
 </html>
