--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
 
     <footer>
-        <p>Created by: <a href="jshmgb3@gmail.com">Joshua Mugabe</a></p>
-        <p>In collaboration with</p>
-        <p>Created by: <a href="hakimkavuma99@gmail.com">Kavuma Hakim</a></p>
+        <p>Created by: <a href="jshmgb3@gmail.com">Joshua Mugabe</a> and <a href="hakimkavuma99@gmail.com">Kavuma Hakim</a></p>
     </footer>
 
 
