haruna playing with your code here.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         <p>Created by: <a href="jshmgb3@gmail.com">Joshua Mugabe</a> and <a href="hakimkavuma99@gmail.com">Kavuma Hakim</a></p>
     </footer>
 
-
+<p>This is Haruna here .....just trying to learn code and be like hakim.</p>
     </body>
 </html>
